samples/_failures_safe/1761175833_47f1e9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fa1e7292.c: In function ‘print_stats’:
./samples/SAFE/__tmp_fa1e7292.c:136:12: error: missing terminating " character
  136 |     printf("Debug entries: %d
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_fa1e7292.c:136:5: error: expected expression at end of input
  136 |     printf("Debug entries: %d
      |     ^~~~~~
./samples/SAFE/__tmp_fa1e7292.c:136:5: error: expected declaration or statement at end of input
